# sapphire.rb

./: CMakeLists.txt  README.md  Rakefile  sapphire.gemspec
ext/: auxlib.rb  extconf.rb  linux.sh  msys2.sh  sapphire.c
ext/include/: exceptions.h  ext.h  sapphire.h  sdl.h
ext/include/klass/: event.h  window.h
ext/include/ruby/: config.h
ext/src/: event.c  exceptions.c  ext.c  extconf.rb  linux.sh  sapphire.c  window.c
lib/: sapphire.rb
lib/sapphire/: ext.rb  version.rb
